tests/fixtures/positive/release-engineering/CommentedOutImport.kt
package com.example.releaseengineering

// import com.example.old.LegacyFeatureFlag

fun currentFlag(): String {
    return "enabled"
}
