tests/fixtures/negative/release-engineering/CommentedOutImport.kt
package com.example.releaseengineering

import com.example.current.FeatureFlag

// Legacy import was removed during refactor.

fun currentFlag(flag: FeatureFlag): FeatureFlag {
    return flag
}
